Upgrade Java 17 to Java 21 via OpenRewrite UpgradeToJava21 recipe