@@ -130,9 +130,9 @@ class ShopCommandHandler {
         
         long playerGold = dao.getGold(charId);
         if (playerGold < totalCost) {
-            out.println("You need " + String.format("%,d", totalCost) + " gp to buy " + 
+            out.println("You need " + "%,d".formatted(totalCost) + " gp to buy " + 
                 (quantity > 1 ? quantity + " " + matchedItem.name : matchedItem.name) + 
-                ", but you only have " + String.format("%,d", playerGold) + " gp.");
+                ", but you only have " + "%,d".formatted(playerGold) + " gp.");
             return true;
         }
         
@@ -148,9 +148,9 @@ class ShopCommandHandler {
         
         String itemName = matchedItem.name != null ? matchedItem.name : "an item";
         if (quantity == 1) {
-            out.println("You buy " + itemName + " for " + String.format("%,d", totalCost) + " gp.");
+            out.println("You buy " + itemName + " for " + "%,d".formatted(totalCost) + " gp.");
         } else {
-            out.println("You buy " + quantity + " " + itemName + " for " + String.format("%,d", totalCost) + " gp.");
+            out.println("You buy " + quantity + " " + itemName + " for " + "%,d".formatted(totalCost) + " gp.");
         }
         return true;
     }
@@ -218,7 +218,7 @@ class ShopCommandHandler {
         out.println("Items for sale:");
         for (ItemTemplate item : itemsForSale) {
             String itemName = item.name != null ? item.name : "(unnamed)";
-            out.println(String.format("  %-40s %,d gp", itemName, item.value));
+            out.println("  %-40s %,d gp".formatted(itemName, item.value));
         }
         return true;
     }
@@ -422,7 +422,7 @@ class ShopCommandHandler {
         java.util.List<ItemDAO.RoomItem> toSell = matchingItems.subList(0, actualQuantity);
         
         // Calculate sell value (half of item value, minimum 1)
-        ItemDAO.RoomItem soldItem = toSell.get(0);
+        ItemDAO.RoomItem soldItem = toSell.getFirst();
         int sellPrice = Math.max(1, soldItem.template.value / 2);
         long totalGold = (long) sellPrice * actualQuantity;
         
@@ -436,9 +436,9 @@ class ShopCommandHandler {
         
         String itemName = ClientHandler.getItemDisplayName(soldItem);
         if (actualQuantity == 1) {
-            out.println("You sell " + itemName + " for " + String.format("%,d", totalGold) + " gp.");
+            out.println("You sell " + itemName + " for " + "%,d".formatted(totalGold) + " gp.");
         } else {
-            out.println("You sell " + actualQuantity + " " + itemName + " for " + String.format("%,d", totalGold) + " gp.");
+            out.println("You sell " + actualQuantity + " " + itemName + " for " + "%,d".formatted(totalGold) + " gp.");
         }
         
         if (actualQuantity < quantity) {
